--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="pages/index.css">
-    <link href="//db.onlinewebfonts.com/c/e86d1edf66d9d65b1f237295820e45b9?family=Kaspersky+Bold" rel="stylesheet" type="text/css"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Путешествия по России</title>
@@ -47,9 +46,6 @@
                     Select the solution that fits best your needs, click on “Buy now”, fill in your personal code received by email in the cart, your discount will apply.</p>
 
             </section>
-
-
-
             <section class="cards">
                 <div class="card__popup">
                     <p class="card__popup-text">Lorem ipsum dolor sit amet, consectetur elit adipiscing elit elit elit. Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consectetur.</p>
@@ -227,7 +223,6 @@
 
                 </div>
             </section>
-
             <section class="table">
                 <h3 class="table__title">Choose the protection that's right for you</h3>
                 <div class="table__small-cards">
@@ -569,9 +564,6 @@
 
                 </table>
             </section>
-
-
-
             <section class="devices">
                 <div class="devices__card">
                     <div class="devices__card-row">
@@ -837,52 +829,61 @@
 
 
             </section>
-
             <section class="faq">
                 <img class="table__polygon" src="images/Polygon.svg" alt="">
 
                 <div class="faq__wrapper" style="justify-content: space-between">
                     <h3 class="faq__title">Frequently Asked Questions</h3>
-
+                    <div style="display: flex">
                         <button class="faq__button">FAQ</button>
                         <button class="faq__button-srq">System Requirements</button>
-                </div>
-
-                <div class="faq__table">
-<!--                    <tr class="table__content_row-gray">-->
-<!--                        <td class="table__content-d">-->
-<!--                            <div class="table__content-wrapper">-->
-<!--                                <img class="table__content_img" src="images/Ptotection.svg" alt="Protection">-->
-<!--                                <div class="column__wrapper">-->
-<!--                                    <p class="table__content-title">Protect your computer against ransomware</p>-->
-<!--                                    <p class="table__content-text">Prevent your devices from being hijacked.</p>-->
-<!--                                    <a class="table__content-span" href="#">More info +</a>-->
-<!--                                </div>-->
-<!--                            </div>-->
-<!--                        </td>-->
-
-                    <div class="faq__grid">
-                        <div class="faq__grid-frame"><button class="faq__grid-btn">+</button></div>
-                        <div class="faq__grid-text">How many devices can I protect?</div>
-                        <div class="faq__grid-frame"> <button class="faq__grid-btn">+</button></div>
-                        <div class="faq__grid-text">Will I get the latest version?</div>
-                        <div class="faq__grid-frame"><button class="faq__grid-btn">+</button></div>
-                        <div class="faq__grid-text">How quickly can I start using the software?</div>
-                        <div class="faq__grid-frame"><button class="faq__grid-btn_opened">-</button></div>
-                        <div class="faq__grid-text_opened">How do I download and install the software?
-                        <div class="faq__grid-text_opened_content">You download the software straight from our website. Simply complete your payment order and the download link will appear on the order confirmation page. The same download link will ...</div>
-                        </div>
-                        <div class="faq__grid-frame"> <button class="faq__grid-btn">+</button></div>
-                        <div class="faq__grid-text">What type of encryption is used in Kaspersky VPN?</div>
-                        <div class="faq__grid-frame"><button class="faq__grid-btn">+</button></div>
-                        <div class="faq__grid-text">What server locations are offered by Kaspersky VPN?</div>
-                        <div class="faq__grid-frame"><button class="faq__grid-btn">+</button></div>
-                        <div class="faq__grid-text">Lorem ipsum is placeholder text commonly used?</div>
-
                     </div>
+
                 </div>
+
 
             </section>
+            <div class="reqs">
+                <div class="reqs__wrapper" style="justify-content: space-between">
+                    <h3 class="req__title">System Requirements</h3>
+                    <div style="display: flex">
+                        <button class="faq__button">FAQ</button>
+                        <button class="faq__button-srq">System Requirements</button>
+                    </div>
+                </div>
+                <p class="reqs__text">For all devices</p>
+
+                <div class="req__grid">
+                    <div class="req__grid-item"><img src="images/Green.svg" alt="GreenCheck"></div>
+                    <div class="req__grid-item-text">Internet connection required – for product activation & updates and for access to some features </div>
+                    <div class="req__grid-item"><img src="images/Green.svg" alt="GreenCheck"></div>
+                    <div class="req__grid-item-text margin-b">Webcam Protection technology only runs on PCs & Mac computers.
+                        The feature is available for a range of compatible web-cameras. For the full list of compatible devices, please visit:
+                        <span class="req__grid-span">https://support.kaspersky.com/14108#block1</span>(for PCs) and<pre style="margin: 0"></pre>
+                        <span class="req__grid-span"> https://support.kaspersky.com/14248#block1</span> (for Mac computers)</div>
+                </div>
+
+                <h3 class="req__title" style="margin: 30px 0 16px">Windows®-based desktops and laptops</h3>
+                <div class="req__grid" style="margin-bottom: 104px">
+                    <div class="req__grid-item"><img src="images/Green.svg" alt="GreenCheck"></div>
+                    <div class="req__grid-item-text">1500 MB free space on the hard drive</div>
+                    <div class="req__grid-item"><img src="images/Green.svg" alt="GreenCheck"></div>
+                    <div class="req__grid-item-text">Microsoft® Internet Explorer® 10 or higher</div>
+                    <div class="req__grid-item"><img src="images/Green.svg" alt="GreenCheck"></div>
+                    <div class="req__grid-item-text">Microsoft .NET Framework 4 or higher </div>
+                    <div class="req__grid-item"><img src="images/Green.svg" alt="GreenCheck"></div>
+                    <div class="req__grid-item-text"> Microsoft Windows 101 Home / Pro / Enterprise2 3 </div>
+                    <div class="req__grid-item"><img src="images/Green.svg" alt="GreenCheck"></div>
+                    <div class="req__grid-item-text">Microsoft Windows 8 & 8.1 / Pro / Enterprise3 / 8.1 update2</div>
+                    <div class="req__grid-item"><img src="images/Green.svg" alt="GreenCheck"></div>
+                    <div class="req__grid-item-text">Microsoft Windows 7 Starter / Home Basic & Premium / Professional / Ultimate — SP1 or higher2</div>
+                    <div class="req__grid-item"><img src="images/Green.svg" alt="GreenCheck"></div>
+                    <div class="req__grid-item-text">Processor: 1 GHz or higher</div>
+                    <div class="req__grid-item"><img src="images/Green.svg" alt="GreenCheck"></div>
+                    <div class="req__grid-item-text margin-b">Memory (RAM): 1 GB (32-bit) or 2 GB (64-bit)</div>
+                </div>
+
+            </div>
 
 
 
@@ -931,7 +932,47 @@
 
 
 
+    <div class="reqs">
+        <div class="reqs__wrapper" style="justify-content: space-between">
+            <h3 class="req__title">System Requirements</h3>
+            <div style="display: flex">
+                <button class="faq__button">FAQ</button>
+                <button class="faq__button-srq">System Requirements</button>
+            </div>
+        </div>
+        <p class="reqs__text">For all devices</p>
 
+        <div class="req__grid">
+            <div class="req__grid-item"><img src="images/Green.svg" alt="GreenCheck"></div>
+            <div class="req__grid-item-text">Internet connection required – for product activation & updates and for access to some features </div>
+            <div class="req__grid-item"><img src="images/Green.svg" alt="GreenCheck"></div>
+            <div class="req__grid-item-text margin-b">Webcam Protection technology only runs on PCs & Mac computers.
+                The feature is available for a range of compatible web-cameras. For the full list of compatible devices, please visit:
+                <span class="req__grid-span">https://support.kaspersky.com/14108#block1</span>(for PCs) and<pre style="margin: 0"></pre>
+                <span class="req__grid-span"> https://support.kaspersky.com/14248#block1</span> (for Mac computers)</div>
+        </div>
+
+        <h3 class="req__title" style="margin: 30px 0 16px">Windows®-based desktops and laptops</h3>
+        <div class="req__grid" style="margin-bottom: 104px">
+            <div class="req__grid-item"><img src="images/Green.svg" alt="GreenCheck"></div>
+            <div class="req__grid-item-text">1500 MB free space on the hard drive</div>
+            <div class="req__grid-item"><img src="images/Green.svg" alt="GreenCheck"></div>
+            <div class="req__grid-item-text">Microsoft® Internet Explorer® 10 or higher</div>
+            <div class="req__grid-item"><img src="images/Green.svg" alt="GreenCheck"></div>
+            <div class="req__grid-item-text">Microsoft .NET Framework 4 or higher </div>
+            <div class="req__grid-item"><img src="images/Green.svg" alt="GreenCheck"></div>
+            <div class="req__grid-item-text"> Microsoft Windows 101 Home / Pro / Enterprise2 3 </div>
+            <div class="req__grid-item"><img src="images/Green.svg" alt="GreenCheck"></div>
+            <div class="req__grid-item-text">Microsoft Windows 8 & 8.1 / Pro / Enterprise3 / 8.1 update2</div>
+            <div class="req__grid-item"><img src="images/Green.svg" alt="GreenCheck"></div>
+            <div class="req__grid-item-text">Microsoft Windows 7 Starter / Home Basic & Premium / Professional / Ultimate — SP1 or higher2</div>
+            <div class="req__grid-item"><img src="images/Green.svg" alt="GreenCheck"></div>
+            <div class="req__grid-item-text">Processor: 1 GHz or higher</div>
+            <div class="req__grid-item"><img src="images/Green.svg" alt="GreenCheck"></div>
+            <div class="req__grid-item-text margin-b">Memory (RAM): 1 GB (32-bit) or 2 GB (64-bit)</div>
+        </div>
+
+    </div>
 
 
 
