--- a/index.html
+++ b/index.html
@@ -843,7 +843,7 @@
 
 
             </section>
-            <div class="reqs">
+            <div class="reqs" style="display: none">
                 <div class="reqs__wrapper" style="justify-content: space-between">
                     <h3 class="req__title">System Requirements</h3>
                     <div style="display: flex">
