styles fixed in lead

--- a/index.html
+++ b/index.html
@@ -26,24 +26,26 @@
         <main class="content">
             <section class="lead">
                 <div class="flex__wrapper">
-                    <div>
+                    <div class="lead__relative">
                         <div class="lead__slogan">
                             <img src="images/Kaspersky_lead.svg" alt="Kaspersky logo">
                             <img class="lead__slogan_letter" src="images/&.svg" alt="Kaspersky &">
                             <img class="lead__slogan_energizer" src="images/Energizer_logo.svg" alt="">
                         </div>
-                        <h3 class="lead__title">Enjoy 20$ free and save up to 60%             on your online security</h3>
+                        <h3 class="lead__title">Enjoy 20$ free and save up to 60%<pre style="margin: 0"></pre>on your online security</h3>
                         <img style="margin: 0" src="images/Line.svg" alt="">
-                        <p class="lead__paragraph">Whatever you need to protect – your PC & mobile devices or your family’s entire digital world – we’ve got the security solutions you need. Our premium solutions are all Android compatible to make sure your mobile is as safe as your PC or laptops.
-                            Select the solution that fits best your needs, click on “Buy now”, fill in your personal code received by email in the cart, your discount will apply.</p>
+                        <p class="lead__paragraph">Whatever you need to protect – your PC & mobile devices or your family’s entire
+                            digital world – we’ve got the security solutions you need. Our premium solutions  are
+                            all Android compatible to make sure your mobile is as safe as your PC or laptops.
+
+                            Select the solution that fits best your needs, click on “Buy now”, fill in your personal
+                            code received by email in the cart, your discount will apply.</p>
                         <span class="lead__link" href="#">Terms and conditions</span>
                     </div>
                     <img class="lead__img" src="images/couple%20with%20popcorn.png" alt="">
                     <img class="lead__img_medium" src="images/Masthead%20BG%20image%20(masked).png" alt="">
                 </div>
-                <p class="lead__text_medium">Whatever you need to protect – your PC & mobile devices or your family’s entire digital world – we’ve got the security solutions you need. Our premium solutions are all Android compatible to make sure your mobile is as safe as your PC or laptops.
 
-                    Select the solution that fits best your needs, click on “Buy now”, fill in your personal code received by email in the cart, your discount will apply.</p>
 
             </section>
             <section class="cards">
@@ -99,7 +101,7 @@
                         </div>
                         <p class="card__new-price"><span class="card__new-price_small down">$</span>39<span class="card__new-price_small">,99*</span></p>
                         <button class="card__button">Buy now</button>
-                        <div class="flex__wrapper">
+                        <div class="flex__wrapper" style="justify-content: center">
                             <img class="card__checkbox" src="images/Checkbox.svg" alt="Checkbox"/>
                             <p class="card__renewal">Auto Renewal</p>
                             <img class="card__price-info" src="images/InfoBlack.svg" alt="Info"/>
@@ -157,7 +159,7 @@
                         </div>
                         <p class="card__new-price"><span class="card__new-price_small down">$</span>49<span class="card__new-price_small">,99*</span></p>
                         <button class="card__button">Buy now</button>
-                        <div class="flex__wrapper">
+                        <div class="flex__wrapper" style="justify-content: center">
                             <img class="card__checkbox" src="images/Checkbox.svg" alt="Checkbox"/>
                             <p class="card__renewal">Auto Renewal</p>
                             <img class="card__price-info" src="images/InfoBlack.svg" alt="Info"/>
@@ -213,7 +215,7 @@
                         </div>
                         <p class="card__new-price"><span class="card__new-price_small down">$</span>39<span class="card__new-price_small">,99*</span></p>
                         <button class="card__button">Buy now</button>
-                        <div class="flex__wrapper">
+                        <div class="flex__wrapper" style="justify-content: center">
                             <img class="card__checkbox" src="images/Checkbox.svg" alt="Checkbox"/>
                             <p class="card__renewal">Auto Renewal</p>
                             <img class="card__price-info" src="images/InfoBlack.svg" alt="Info"/>
