--- a/index.html
+++ b/index.html
@@ -45,6 +45,16 @@
                     <img class="lead__img" src="images/couple%20with%20popcorn.png" alt="">
                     <img class="lead__img_medium" src="images/Masthead%20BG%20image%20(masked).png" alt="">
                 </div>
+                <div class="lead__medium-wrapper">
+                    <img style="margin: 0" src="images/Line.svg" alt="">
+                    <p class="lead__paragraph-med">Whatever you need to protect – your PC & mobile devices or your
+                        family’s entire digital world – we’ve got the security solutions you
+                        need. Our premium solutions  are all Android compatible to make
+                        sure your mobile is as safe as your PC or laptops.
+
+                        Select the solution that fits best your needs, click on “Buy now”, fill in your personal code received by email in the cart, your discount will apply.</p>
+                    <span class="lead__link" href="#">Terms and conditions</span>
+                </div>
 
 
             </section>
@@ -841,8 +851,28 @@
                         <button class="faq__button-srq">System Requirements</button>
                     </div>
 
-                </div>
 
+
+                </div>
+                <div class="faq__grid">
+                    <div class="faq__grid-frame"><button class="faq__grid-btn">+</button></div>
+                    <div class="faq__grid-text">How many devices can I protect?</div>
+                    <div class="faq__grid-frame"> <button class="faq__grid-btn">+</button></div>
+                    <div class="faq__grid-text">Will I get the latest version?</div>
+                    <div class="faq__grid-frame"><button class="faq__grid-btn">+</button></div>
+                    <div class="faq__grid-text">How quickly can I start using the software?</div>
+                    <div class="faq__grid-frame"><button class="faq__grid-btn_opened">-</button></div>
+                    <div class="faq__grid-text_opened">How do I download and install the software?
+                        <div class="faq__grid-text_opened_content">You download the software straight from our website. Simply complete your payment order and the download link will appear on the order confirmation page. The same download link will ...</div>
+                    </div>
+                    <div class="faq__grid-frame"> <button class="faq__grid-btn">+</button></div>
+                    <div class="faq__grid-text">What type of encryption is used in Kaspersky VPN?</div>
+                    <div class="faq__grid-frame"><button class="faq__grid-btn">+</button></div>
+                    <div class="faq__grid-text">What server locations are offered by Kaspersky VPN?</div>
+                    <div class="faq__grid-frame"><button class="faq__grid-btn">+</button></div>
+                    <div class="faq__grid-text">Lorem ipsum is placeholder text commonly used?</div>
+
+                </div>
 
             </section>
             <div class="reqs" style="display: none">
@@ -885,7 +915,7 @@
                     <div class="req__grid-item-text margin-b">Memory (RAM): 1 GB (32-bit) or 2 GB (64-bit)</div>
                 </div>
 
-            </div>
+            </div sty >
 
 
 
@@ -934,47 +964,6 @@
 
 
 
-    <div class="reqs">
-        <div class="reqs__wrapper" style="justify-content: space-between">
-            <h3 class="req__title">System Requirements</h3>
-            <div style="display: flex">
-                <button class="faq__button">FAQ</button>
-                <button class="faq__button-srq">System Requirements</button>
-            </div>
-        </div>
-        <p class="reqs__text">For all devices</p>
-
-        <div class="req__grid">
-            <div class="req__grid-item"><img src="images/Green.svg" alt="GreenCheck"></div>
-            <div class="req__grid-item-text">Internet connection required – for product activation & updates and for access to some features </div>
-            <div class="req__grid-item"><img src="images/Green.svg" alt="GreenCheck"></div>
-            <div class="req__grid-item-text margin-b">Webcam Protection technology only runs on PCs & Mac computers.
-                The feature is available for a range of compatible web-cameras. For the full list of compatible devices, please visit:
-                <span class="req__grid-span">https://support.kaspersky.com/14108#block1</span>(for PCs) and<pre style="margin: 0"></pre>
-                <span class="req__grid-span"> https://support.kaspersky.com/14248#block1</span> (for Mac computers)</div>
-        </div>
-
-        <h3 class="req__title" style="margin: 30px 0 16px">Windows®-based desktops and laptops</h3>
-        <div class="req__grid" style="margin-bottom: 104px">
-            <div class="req__grid-item"><img src="images/Green.svg" alt="GreenCheck"></div>
-            <div class="req__grid-item-text">1500 MB free space on the hard drive</div>
-            <div class="req__grid-item"><img src="images/Green.svg" alt="GreenCheck"></div>
-            <div class="req__grid-item-text">Microsoft® Internet Explorer® 10 or higher</div>
-            <div class="req__grid-item"><img src="images/Green.svg" alt="GreenCheck"></div>
-            <div class="req__grid-item-text">Microsoft .NET Framework 4 or higher </div>
-            <div class="req__grid-item"><img src="images/Green.svg" alt="GreenCheck"></div>
-            <div class="req__grid-item-text"> Microsoft Windows 101 Home / Pro / Enterprise2 3 </div>
-            <div class="req__grid-item"><img src="images/Green.svg" alt="GreenCheck"></div>
-            <div class="req__grid-item-text">Microsoft Windows 8 & 8.1 / Pro / Enterprise3 / 8.1 update2</div>
-            <div class="req__grid-item"><img src="images/Green.svg" alt="GreenCheck"></div>
-            <div class="req__grid-item-text">Microsoft Windows 7 Starter / Home Basic & Premium / Professional / Ultimate — SP1 or higher2</div>
-            <div class="req__grid-item"><img src="images/Green.svg" alt="GreenCheck"></div>
-            <div class="req__grid-item-text">Processor: 1 GHz or higher</div>
-            <div class="req__grid-item"><img src="images/Green.svg" alt="GreenCheck"></div>
-            <div class="req__grid-item-text margin-b">Memory (RAM): 1 GB (32-bit) or 2 GB (64-bit)</div>
-        </div>
-
-    </div>
 
 
 
