720px footer fixed

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="pages/index.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Путешествия по России</title>
+    <title>Kaspersky & Energizer</title>
 </head>
 
 <body class="page">
@@ -863,7 +863,7 @@
 
             </section>
             <section class="faq">
-                <img class="table__polygon" src="images/Polygon.svg" alt="">
+                <img class="faq__polygon" src="images/Polygon.svg" alt="">
 
                 <div class="faq__wrapper" style="justify-content: space-between">
                     <h3 class="faq__title">Frequently Asked Questions</h3>
