--- a/index.html
+++ b/index.html
@@ -868,7 +868,7 @@
                 <div class="faq__wrapper" style="justify-content: space-between">
                     <h3 class="faq__title">Frequently Asked Questions</h3>
                     <div style="display: flex">
-                        <button class="faq__button">FAQ</button>
+                        <button class="faq__button faq__button_enabled" disabled>FAQ</button>
                         <button class="faq__button-srq">System Requirements</button>
                     </div>
 
@@ -946,14 +946,14 @@
                 <p class="footer__text">© 2020 AO Kaspersky Lab. All Rights Reserved.</p>
                 <p class="footer__text">Adaptive security technology is based on the patent US7584508 B1:
                     ‘Adaptive security for information devices’.</p>
-                <nav class="footer__nav">
-                    <a href="https://yandex.ru/maps" class="footer__link" target="blank">Privacy Policy</a>
-                    <a href="https//yandex.ru/pogoda" class="footer__link" target="blank">Anti-Corruption Policy</a>
-                    <a href="https://rasp.yandex.ru" class="footer__link" target="blank">Licence Agreement B2C</a>
-                    <a href="https://calendar.yandex.ru" class="footer__link" target="blank">Licence Agreement B2B</a>
-                    <a href="https://travel.yandex.ru" class="footer__link" target="blank">Terms of Use</a>
-                    <a href="https://travel.yandex.ru" class="footer__link" target="blank">Refund Policy</a>
-                </nav>
+                <ul class="footer__nav">
+                    <li><a href="https://yandex.ru/maps" class="footer__link" target="blank">Privacy Policy</a></li>
+                    <li> <a href="https//yandex.ru/pogoda" class="footer__link" target="blank">Anti-Corruption Policy</a></li>
+                    <li> <a href="https://rasp.yandex.ru" class="footer__link" target="blank">Licence Agreement B2C</a></li>
+                    <li> <a href="https://calendar.yandex.ru" class="footer__link" target="blank">Licence Agreement B2B </a></li>
+                    <li> <a href="https://travel.yandex.ru" class="footer__link" target="blank">Terms of Use </a></li>
+                    <li> <a href="https://travel.yandex.ru" class="footer__link" target="blank">Refund Policy</a></li>
+                </ul>
             </div>
             <div class="footer__options">
                 <div class="footer__socials">
@@ -981,26 +981,7 @@
     </div>
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+    <script type="module" src="index.js"></script>
 
 
 
